syntax = "proto3";

package nl.Topology;

option csharp_namespace = "NetworkLayer.Grpc.Topology";

service NetworkTopologyUpdater {
    rpc ScaleUp (ScaleUpRequest) returns (ScaleUpResponse) {}
    rpc ScaleDown (ScaleDownRequest) returns (ScaleDownResponse) {}
}

message ScaleUpRequest {
    repeated NewNetworkObject new_network_objects = 1;
}

message NewNetworkObject {
}

message ScaleUpResponse {
    repeated int32 created_ids = 1;
}

message ScaleDownRequest {
    repeated int32 remove_ids = 1;
}

message ScaleDownResponse {
    repeated int32 not_found_ids = 1;
}
